--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -810,16 +810,15 @@ Banner Style
 }
 
 .main-banner .item-1 {
-  background-image: linear-gradient(70deg, #101010 0%, #18181861 100%),
-    url(https://res.cloudinary.com/dqcukddwu/image/upload/v1709019432/ofzspace/bg-_pgiytk.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_two_nnsyb8.jpg);
 }
 
 .main-banner .item-2 {
-  background-image: url(../images/banner-02.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_three_nhzc5r.jpg);
 }
 
 .main-banner .item-3 {
-  background-image: url(../images/banner-03.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_one_l6ehty.jpg);
 }
 
 .main-banner .item span.category {
