--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -810,15 +810,21 @@ Banner Style
 }
 
 .main-banner .item-1 {
-  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_two_nnsyb8.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_two_nnsyb8.jpg)
+    no-repeat center fixed;
+  background-size: cover;
 }
 
 .main-banner .item-2 {
-  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_three_nhzc5r.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_three_nhzc5r.jpg)
+    no-repeat center fixed;
+  background-size: cover;
 }
 
 .main-banner .item-3 {
-  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_one_l6ehty.jpg);
+  background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_one_l6ehty.jpg)
+    no-repeat center fixed;
+  background-size: cover;
 }
 
 .main-banner .item span.category {
