--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,19 +811,22 @@ Banner Style
 
 .main-banner .item-1 {
   background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_two_nnsyb8.jpg),
-    no-repeat center fixed;
+    center, fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 .main-banner .item-2 {
   background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_three_nhzc5r.jpg),
-    no-repeat center fixed;
+    center, fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 .main-banner .item-3 {
   background-image: url(https://res.cloudinary.com/dqcukddwu/image/upload/v1715246225/banner_one_l6ehty.jpg),
-    no-repeat center fixed;
+    center, fixed;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
