--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,7 +804,7 @@ Banner Style
 .main-banner .item {
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   padding: 220px 20% 320px 20%;
   margin-top: 0px;
 }
